@@ -1,3 +1,10 @@
+2009-01-07 16:42-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* PreferencePanes/NSPreferencePane.h
+	* PreferencePanes/NSPreferencePane.m
+	* PreferencePanes/PreferencePanes.h: Corrections to header
+	language. 
+
 2008-09-25 02:42-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GNUmakefile
